package parkinglot.interfaces;

public interface Observer {
    void updateCount(int count); // [cite: 82]
}